RESOLVED FIXED176710
AX: Fields that are autofill-able but don't have an AutoFill button should still be announced as autofill-able
https://bugs.webkit.org/show_bug.cgi?id=176710
Summary AX: Fields that are autofill-able but don't have an AutoFill button should st...
Maureen Daum
Reported 2017-09-11 10:29:15 PDT
AX: Fields that are autofill-able but don't have an AutoFill button should still be announced as autofill-able. Currently VO only announces that fields have AutoFill available if there is an AutoFill button in the field. However, there are fields where AutoFill is available but we choose not to show the AutoFill button in them. There should be some way to mark these fields that don't have an AutoFill button as being autofill-able so that VO can announce it.
Attachments
Patch (11.09 KB, patch)
2017-09-11 10:43 PDT, Maureen Daum
no flags
Patch with test (22.62 KB, patch)
2017-09-12 17:28 PDT, Maureen Daum
no flags
Patch with test (22.66 KB, patch)
2017-09-13 11:26 PDT, Maureen Daum
no flags
Radar WebKit Bug Importer
Comment 1 2017-09-11 10:29:39 PDT
Maureen Daum
Comment 2 2017-09-11 10:43:10 PDT
Alex Christensen
Comment 3 2017-09-11 10:52:48 PDT
Comment on attachment 320441 [details] Patch Please add a test. https://bugs.webkit.org/show_bug.cgi?id=176139 added a test for autofill stuff in the bundle.
chris fleizach
Comment 4 2017-09-11 11:04:13 PDT
Comment on attachment 320441 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=320441&action=review > Source/WebCore/ChangeLog:12 > + * accessibility/AccessibilityObject.cpp: can you add a test? thanks > Source/WebCore/accessibility/AccessibilityObject.cpp:2464 > + return downcast<HTMLInputElement>(*node).isAutoFillAvailable() || downcast<HTMLInputElement>(*node).autoFillButtonType() != AutoFillButtonType::None; will isAutoFillAvailable() always be true if button type == None? how will users activate auto fill if there's no button to press?
Maureen Daum
Comment 5 2017-09-11 11:13:33 PDT
Comment on attachment 320441 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=320441&action=review >> Source/WebCore/ChangeLog:12 >> + * accessibility/AccessibilityObject.cpp: > > can you add a test? thanks Sure thing! >> Source/WebCore/accessibility/AccessibilityObject.cpp:2464 >> + return downcast<HTMLInputElement>(*node).isAutoFillAvailable() || downcast<HTMLInputElement>(*node).autoFillButtonType() != AutoFillButtonType::None; > > will isAutoFillAvailable() always be true if button type == None? > > how will users activate auto fill if there's no button to press? isAutoFillAvailable() will only be true on the text fields that Safari sets it on. Users can use the arrow keys to activate autofill. The VoiceOver announcement specifies, "To open the autofill menu, press the up or down arrow key, then press the return key to enter it into the form."
Maureen Daum
Comment 6 2017-09-12 17:28:25 PDT
Created attachment 320587 [details] Patch with test
Maureen Daum
Comment 7 2017-09-13 11:26:23 PDT
Created attachment 320662 [details] Patch with test
WebKit Commit Bot
Comment 8 2017-09-14 00:01:24 PDT
Comment on attachment 320662 [details] Patch with test Clearing flags on attachment: 320662 Committed r222013: <http://trac.webkit.org/changeset/222013>
WebKit Commit Bot
Comment 9 2017-09-14 00:01:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.